--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
   <groupId>org.jenkins-ci.plugins</groupId>
   <artifactId>project-build-times</artifactId>
   <name>Project Build Times</name>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/Project+Build+Times</url>
 
   <scm>
     <connection>scm:git:ssh://github.com/jenkinsci/project-build-times-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/jenkinsci/project-build-times-plugin.git</developerConnection>
-    <url>https://github.com/jenkinsci/MYPLUGINNAME</url>
+    <url>https://github.com/jenkinsci/project-build-times-plugin</url>
   </scm>
 
   <dependencies>
